# f1-optimizer

./: .env.example  .gitignore  LIMITATIONS.md  README.md  USAGE.md  pyproject.toml
scripts/: seed_circuits.py
src/f1opt/: analysis.py  cli.py  config.py  db.py  display.py  fantasy_api.py  ingest.py  models.py  optimizer.py
